chore: downgraded to Java 11